Adding final prompt and output as well as ideal json output example.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
 {
     // Specific configuration for an extension like "Run on Save" (by emeraldwalk)
     "emeraldwalk.runonsave": {
+
+
         "commands": [
             {
                 "match": "\\.prompt(\\.md)?$", // Regex: matches files ending in .prompt or .prompt.md
-                "cmd": "python3 ${workspaceFolder}/.scripts/run_gemini_from_file.py ${file}", // Adjust path to your script
+                "cmd": ". ${workspaceFolder}/.scripts/configure.sh && rm -f ${fileBasename}.output.md && . ${workspaceFolder}/.venv/bin/activate && python3 ${workspaceFolder}/.scripts/run_gemini_from_file.py ${file}",                 
                 "runIn": "terminal", // Runs in the integrated terminal
                 "runningStatusMessage": "Calling Gemini for ${fileBasename}...",
                 "finishStatusMessage": "${fileBasename} processed by Gemini."
