--- a/.scripts/requirements.txt
+++ b/.scripts/requirements.txt
@@ -3,8 +3,10 @@ google-cloud-aiplatform
 google-cloud-storage
 google-cloud-logging
 requests
+gcsfs
 pypdf
 matplotlib 
 numpy
 pandas
 scikit-learn
+fsspec
