--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,8 @@ __pycache__/
 *.pyc
 
 # Generated output and artifact files
-*.output.md
+*output.md
 *.html
 *.csv
 *.png
 last_run_timestamp.txt
-*.output.md
