--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ __pycache__/
 *.png
 last_run_timestamp.txt
 paul.prompt.*
+.scripts/exclusions_340b_rebate.yaml
+.vscode/exclusions_340b_rebate.yaml
+prompts/exclusions_340b_rebate.yaml
+templates/exclusions.prompt.template.md
