Staging changes to configure.sh

--- a/.env.empty
+++ b/.env.empty
@@ -13,5 +13,11 @@ LOG_NAME=""
 # --- RAG Configuration ---
 RAG_CORPUS_NAME=""
 
-# --- OPTIONAL. Authenticate with the service account. Defaults to Google Auth without this set ---
+# --- OPTIONAL
+
+# --- Authenticate with the service account. Defaults to Google Auth without this set ---
 SERVICE_ACCOUNT_KEY_FILE=""
+
+# --- GIT stuff ---
+GIT_USER_NAME=""
+GIT_USER_EMAIL=""
