Committing working Cloud Logging with ADK Web and also agent_eval.py.

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ PROJECT_ID="kallogjeri-project-345114"
 REGION="us-central1"
 GCP_USER_ACCOUNT="aburdenko@kallogjeri.altostrat.com" # The primary user account for gcloud auth
 
+GOOGLE_GENAI_USE_VERTEXAI="True"
+
 # --- GCS Bucket Configuration ---
 STAGING_GCS_BUCKET="gs://kallogjeri-project-345114-staging"
 SOURCE_GCS_BUCKET="gs://kallogjeri-project-345114-source"
@@ -21,3 +23,5 @@ SERVICE_ACCOUNT_KEY_FILE="/home/user/service_account.json"
 # --- GIT stuff ---
 GIT_USER_NAME="Alex Burdenko"
 GIT_USER_EMAIL="aburdenko@yahoo.com"
+
+DATA_STORE_ID="projects/kallogjeri-project-345114/locations/us-central1/ragCorpora/2305843009213693952"
