--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@ prompts/exclusions_340b_rebate.yaml
 templates/exclusions.prompt.template.md
 nohup.out
 .env
+agents/rag-agent/uv.lock
+agents/rag-agent/.adk/**
+agents/rag-agent/eval_sets/**
+agents/rag-agent/evalset52ada5.evalset.json
+agents/rag-agent/evalset219e1e.evalset.json
+agents/rag-agent/evalsete04bd4.evalset.json
+agents/rag-agent/uv.lock
