--- a/agents/rag-agent/pyproject.toml
+++ b/agents/rag-agent/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "opentelemetry-exporter-gcp-trace>=1.9.0,<2.0.0",
     "google-cloud-logging>=3.12.0,<4.0.0",
     "google-cloud-aiplatform[evaluation,agent-engines]>=1.118.0,<2.0.0",
-    "protobuf>=6.31.1,<7.0.0"
+    "protobuf>=6.31.1,<7.0.0",
+    "opentelemetry-sdk==1.37.0"
+
 ]
 
 requires-python = ">=3.10,<3.13"
