adding evaluation code

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # --- Core Project Configuration ---
 PROJECT_ID="kallogjeri-project-345114"
+#PROJECT_ID="cloud-llm-preview1"
+
 REGION="us-central1"
 GCP_USER_ACCOUNT="aburdenko@kallogjeri.altostrat.com" # The primary user account for gcloud auth
 
