--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ agents/rag-agent/evalset52ada5.evalset.json
 agents/rag-agent/evalset219e1e.evalset.json
 agents/rag-agent/evalsete04bd4.evalset.json
 agents/rag-agent/uv.lock
+.env
