feat: Implement Agent Space deployment script

--- a/.env
+++ b/.env
@@ -31,3 +31,4 @@ GIT_USER_NAME="Alex Burdenko"
 GIT_USER_EMAIL="aburdenko@yahoo.com"
 
 DATA_STORE_ID="projects/kallogjeri-project-345114/locations/us-central1/ragCorpora/2305843009213693952"
+AGENT_SPACE_URL="https://vertexaisearch.cloud.google.com/home/cid/52609c6e-ce45-445d-9236-55c667c6eae4?hl=en_US"
